# Chess

./: .gitignore  CMakeLists.txt  README.md
Chess/: Board.cpp  Board.h  Move.cpp  Move.h  Player.cpp  Player.h  Position.cpp  Position.h  Tile.cpp  Tile.h  Util.h  main.cpp  res.qrc
Chess/Pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
Chess/Qt/: MainWindow.cpp  MainWindow.h  MainWindow.ui
